# datafusion-ndjson-issue

./: Cargo.toml
data/ndjson/hourly_timestamp=2023-09-25T20:00:00/: data.ndjson
data/parquet/hourly_timestamp=2023-09-25T21:00:00/: data.zstd.parquet
src/: main.rs
