[package]
name = "df-test"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-schema = { version = "46.0.0", features = ["serde"] }
datafusion = "31.0.0"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
